--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,110 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.teamDroiders.ladybuddy">
+    package="com.grp9.securelady">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.android.hardware.location.gps"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_2"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.teamDroiders.ladybuddy.AboutUs"
+            android:name="com.grp9.securelady.AboutUs"
             android:exported="true"
             android:label="AboutUs"
-            android:parentActivityName="com.teamDroiders.ladybuddy.MainActivity"
+            android:parentActivityName="com.grp9.securelady.MainActivity"
             android:theme="@style/Theme.New" />
         <activity
-            android:name="com.teamDroiders.ladybuddy.MagBtnInst"
+            android:name="com.grp9.securelady.MagBtnInst"
             android:exported="true"
             android:label="Detailed Instructions"
-            android:parentActivityName="com.teamDroiders.ladybuddy.Magnetometer"
+            android:parentActivityName="com.grp9.securelady.Magnetometer"
             android:theme="@style/Theme.New"/>
         <activity
-            android:name="com.teamDroiders.ladybuddy.SosInsructionsActivity"
+            android:name="com.grp9.securelady.SosInsructionsActivity"
             android:exported="true"
             android:label="SOS Instructions"
-            android:parentActivityName="com.teamDroiders.ladybuddy.SmsActivity"
+            android:parentActivityName="com.grp9.securelady.SmsActivity"
             android:theme="@style/Theme.New" />
         <activity
-            android:name="com.teamDroiders.ladybuddy.Magnetometer"
+            android:name="com.grp9.securelady.Magnetometer"
             android:exported="true"
             android:label="Spy Camera Dectector"
-            android:parentActivityName="com.teamDroiders.ladybuddy.ChoosenActivity"
-            android:theme="@style/Theme.New" />/>
+            android:parentActivityName="com.grp9.securelady.ChoosenActivity"
+            android:theme="@style/Theme.New" />
         <activity
-            android:name="com.teamDroiders.ladybuddy.MagnoInst"
+            android:name="com.grp9.securelady.MagnoInst"
             android:exported="true"
             android:label="Manual Detection"
-            android:parentActivityName="com.teamDroiders.ladybuddy.ChoosenActivity"
+            android:parentActivityName="com.grp9.securelady.ChoosenActivity"
             android:theme="@style/Theme.New" />
         <activity
-            android:name="com.teamDroiders.ladybuddy.Outside"
+            android:name="com.grp9.securelady.Outside"
             android:exported="true"
             android:label="Outside Instructions"
-            android:parentActivityName="com.teamDroiders.ladybuddy.MagnoInst"
+            android:parentActivityName="com.grp9.securelady.MagnoInst"
             android:theme="@style/Theme.New"/>
         <activity
-            android:name="com.teamDroiders.ladybuddy.ChangingRoom"
+            android:name="com.grp9.securelady.ChangingRoom"
             android:exported="true"
             android:label="ChangingRoom Instructions"
-            android:parentActivityName="com.teamDroiders.ladybuddy.MagnoInst"
+            android:parentActivityName="com.grp9.securelady.MagnoInst"
             android:theme="@style/Theme.New"/>
         <activity
-            android:name="com.teamDroiders.ladybuddy.Bedroom"
+            android:name="com.grp9.securelady.Bedroom"
             android:exported="true"
             android:label="Bedroom Instructions"
-            android:parentActivityName="com.teamDroiders.ladybuddy.MagnoInst"
+            android:parentActivityName="com.grp9.securelady.MagnoInst"
             android:theme="@style/Theme.New"/>
         <activity
-            android:name="com.teamDroiders.ladybuddy.Bathroom"
+            android:name="com.grp9.securelady.Bathroom"
             android:exported="true"
             android:label="Bathroom Instructions"
-            android:parentActivityName="com.teamDroiders.ladybuddy.MagnoInst"
+            android:parentActivityName="com.grp9.securelady.MagnoInst"
             android:theme="@style/Theme.New"/>
         <activity
-            android:name="com.teamDroiders.ladybuddy.ChoosenActivity"
+            android:name="com.grp9.securelady.ChoosenActivity"
             android:exported="true"
             android:label="Detect Hidden Cameras"
-            android:parentActivityName="com.teamDroiders.ladybuddy.MainActivity"
+            android:parentActivityName="com.grp9.securelady.MainActivity"
             android:theme="@style/Theme.New" />
         <activity
-            android:name="com.teamDroiders.ladybuddy.NewsActivity"
+            android:name="com.grp9.securelady.NewsActivity"
             android:exported="true"
             android:label="Women's News"
-            android:parentActivityName="com.teamDroiders.ladybuddy.MainActivity"
+            android:parentActivityName="com.grp9.securelady.MainActivity"
             android:theme="@style/Theme.New" />
         <activity
-            android:name="com.teamDroiders.ladybuddy.Instructions"
+            android:name="com.grp9.securelady.Instructions"
             android:label="App Tour"
-            android:parentActivityName="com.teamDroiders.ladybuddy.MainActivity"
+            android:exported="true"
+            android:parentActivityName="com.grp9.securelady.MainActivity"
             android:theme="@style/Theme.New" />
-        <activity android:name="com.teamDroiders.ladybuddy.webactivity" />
+        <activity android:name="com.grp9.securelady.webactivity" />
         <activity
-            android:name="com.teamDroiders.ladybuddy.SmsActivity"
+            android:name="com.grp9.securelady.SmsActivity"
             android:label="Emergency Service"
-            android:parentActivityName="com.teamDroiders.ladybuddy.MainActivity"
+            android:exported="true"
+            android:parentActivityName="com.grp9.securelady.MainActivity"
             android:theme="@style/Theme.New" />
-        <activity android:name="com.teamDroiders.ladybuddy.CurrentLocation" />
-        <activity android:name="com.teamDroiders.ladybuddy.Flashing" />
-        <activity android:name="com.teamDroiders.ladybuddy.SplashActivity">
+        <activity android:name="com.grp9.securelady.CurrentLocation" />
+        <activity android:name="com.grp9.securelady.Flashing" />
+        <activity android:name="com.grp9.securelady.SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.teamDroiders.ladybuddy.MainActivity" />
+        <activity android:name="com.grp9.securelady.MainActivity" />
 
-        <receiver android:name="com.teamDroiders.ladybuddy.ScreenOnOffReceiver">
+        <receiver android:name="com.grp9.securelady.ScreenOnOffReceiver"
+            android:exported="false"
+            android:process=":remote">
             <intent-filter>
                 <action android:name="android.intent.action.SCREEN_OFF" />
                 <action android:name="android.intent.action.SCREEN_ON" />
@@ -113,7 +120,7 @@
         </receiver>
 
         <service
-            android:name="com.teamDroiders.ladybuddy.ScreenOnOffBackgroundService"
+            android:name="com.grp9.securelady.ScreenOnOffBackgroundService"
             android:enabled="true"
             android:exported="false" />
     </application>
